--- a/edu_localizations/lib/src/app_ru.arb
+++ b/edu_localizations/lib/src/app_ru.arb
@@ -6,46 +6,15 @@
   "login_login_submitLoginButtonText": "Войти",
   "login_login_pageTitle": "Вход",
   "login_login_registrationButtonText": "Зарегистрироваться",
-  "login_login_passwordRecoveryButtonText": "Забыли пароль?",
   "login_login_incorrectCredentialsMessage": "Неверные учетные данные",
-  "login_login_accountDisabledMessage": "Ваш аккаунт был отключен. Пожалуйста, свяжитесь с нашей командой поддержки",
-  "login_login_noPrivilegesMessage": "У вас отсутствуют требуемые права",
   "login_login_connectionErrorMessage": "Ошибка подключения",
   "login_login_undefinedErrorMessage": "Что-то пошло не так",
-
-  "login_emailCode_pageTitle": "Вход",
-  "login_emailCode_pageSubtitle": "Введите код, который мы отправили вам на e-mail",
-  "login_emailCode_attemptsLeftMessage": "{current,plural, =1{Осталась 1 попытка} few{Осталось {current}/{max} попытки} many{Осталось {current}/{max} попыток} other{Осталось {current}/{max} попытки}}",
-  "login_emailCode_invalidCodeMessage": "Неверный код",
-  "login_emailCode_noCodeMessage": "Попытки закончились, запросите новый код",
-  "login_emailCode_goToEmailButtonText": "Перейти в почту",
-  "login_emailCode_pasteCodeDialogTitle": "Вставить код",
-  "login_emailCode_pasteCodeDialogContent": "Вставить код",
-  "login_emailCode_pasteCodeDialogAffirmativeActionText": "Да",
-  "login_emailCode_pasteCodeDialogNegativeActionText": "Нет",
-  "login_emailCode_chooseEmailAppToGoDialogTitle": "Выберите приложение",
-  "login_emailCode_resendCodeButtonText": "Отправить повторно",
-  "login_emailCode_failedToResendCodeMessage": "Не удалось отправить код",
-  "login_emailCode_successfullyResentCodeMessage": "Код успешно отправлен",
-  "login_emailCode_connectionErrorMessage": "Ошибка подключения",
-  "login_emailCode_undefinedErrorMessage": "Что-то пошло не так",
 
   "registration_registration_pageTitle": "Регистрация",
   "registration_registration_emailInputHint": "E-mail",
   "registration_registration_usernameInputHint": "Имя пользователя",
-  "registration_registration_emailAlreadyUsedMessage": "Недоступный E-mail",
-  "registration_registration_usernameAlreadyUsedMessage": "Недоступное имя пользователя",
-  "registration_registration_birthdayYearInputHint": "Год рождения",
-  "registration_registration_genderInputHint": "Пол",
   "registration_registration_passwordInputHint": "Пароль",
   "registration_registration_repeatPasswordInputHint": "Повторите пароль",
-  "registration_registration_usernameAllowedSymbolsDialogTitle": "Имя пользователя",
-  "registration_registration_usernameRequiredFromToSymbols": "От {from} до {to} символов",
-  "registration_registration_usernameAllowedSymbolsDialogLowercaseLatinLettersItem": "Строчные латинские буквы a-z",
-  "registration_registration_usernameAllowedSymbolsDialogDigitsItem": "Цифры",
-  "registration_registration_usernameAllowedSymbolsDialogSpecialSymbolsItem": "Символы \".\", \"_\"",
-  "registration_registration_usernameAllowedSymbolsDialogActionText": "ОК",
-  "registration_registration_nextStepButtonText": "Далее",
   "registration_registration_passwordRequiredSymbolsDialogTitle": "Пароль",
   "registration_registration_passwordRequiredFromToSymbols": "От {from} до {to} символов",
   "registration_registration_passwordRequiredSymbolsDialogLowercaseLatinLettersItem": "Минимум одна строчная латинская буква a-z",
@@ -54,127 +23,40 @@
   "registration_registration_passwordRequiredSymbolsDialogActionText": "OK",
   "registration_registration_submitRegistrationButtonText": "Зарегестрироваться",
   "registration_registration_noRepeatedPasswordMatchMessage": "Пароли не совпадают",
-  "registration_registration_filledIncorrectMessage": "Поля заполнены неверно",
   "registration_registration_connectionErrorMessage": "Ошибка подключения",
   "registration_registration_undefinedErrorMessage": "Что-то пошло не так",
-
-  "registration_emailCode_pageTitle": "Осталось совсем чуть-чуть",
-  "registration_emailCode_pageSubtitle": "Введите код, который мы отправили вам на e-mail",
-  "registration_emailCode_attemptsLeftMessage": "{current,plural, =1{Осталась 1 попытка} few{Осталось {current}/{max} попытки} many{Осталось {current}/{max} попыток} other{Осталось {current}/{max} попытки}}",
-  "registration_emailCode_invalidCodeMessage": "Неверный код",
-  "registration_emailCode_noCodeMessage": "Попытки закончились, запросите новый код",
-  "registration_emailCode_goToEmailButtonText": "Перейти в почту",
-  "registration_emailCode_pasteCodeDialogTitle": "Вставить код",
-  "registration_emailCode_pasteCodeDialogContent": "Вставить код",
-  "registration_emailCode_pasteCodeDialogAffirmativeActionText": "Да",
-  "registration_emailCode_pasteCodeDialogNegativeActionText": "Нет",
-  "registration_emailCode_chooseEmailAppToGoDialogTitle": "Выберите приложение",
-  "registration_emailCode_resendCodeButtonText": "Отправить повторно",
-  "registration_emailCode_failedToResendCodeMessage": "Не удалось отправить код",
-  "registration_emailCode_successfullyResentCodeMessage": "Код успешно отправлен",
-  "registration_emailCode_connectionErrorMessage": "Ошибка подключения",
-  "registration_emailCode_undefinedErrorMessage": "Что-то пошло не так",
 
   "registration_finishRegistration_pageTitle": "Поздравляем!",
   "registration_finishRegistration_pageSubtitle": "Вы успешно прошли регистрацию",
   "registration_finishRegistration_startButtonText": "Начинаем",
 
-  "passwordRecovery_passwordRecovery_pageTitle": "Восстановление пароля",
-  "passwordRecovery_passwordRecovery_emailOrUsernameInputHint": "E-mail / имя пользователя",
-  "passwordRecovery_passwordRecovery_passwordInputHint": "Новый пароль",
-  "passwordRecovery_passwordRecovery_repeatPasswordInputHint": "Повторите пароль",
-  "passwordRecovery_passwordRecovery_submitRecoverButtonText": "Восстановить",
-  "passwordRecovery_passwordRecovery_passwordRequiredSymbolsDialogTitle": "Пароль",
-  "passwordRecovery_passwordRecovery_passwordRequiredFromToSymbols": "От {from} до {to} символов",
-  "passwordRecovery_passwordRecovery_passwordRequiredSymbolsDialogLowercaseLatinLettersItem": "Минимум одна строчная латинская буква a-z",
-  "passwordRecovery_passwordRecovery_passwordRequiredSymbolsDialogUppercaseLatinLettersItem": "Минимум одна заглавная латинская буква A-Z",
-  "passwordRecovery_passwordRecovery_passwordRequiredSymbolsDialogDigitsItem": "Минимум одна цифра",
-  "passwordRecovery_passwordRecovery_passwordRequiredSymbolsDialogActionText": "OK",
-  "passwordRecovery_passwordRecovery_noRepeatedPasswordMatchMessage": "Пароли не совпадают",
-  "passwordRecovery_passwordRecovery_connectionErrorMessage": "Ошибка подключения",
-  "passwordRecovery_passwordRecovery_undefinedErrorMessage": "Что-то пошло не так",
-
-  "passwordRecovery_emailCode_pageTitle": "Восстановление пароля",
-  "passwordRecovery_emailCode_pageSubtitle": "Введите код, который мы отправили вам на e-mail",
-  "passwordRecovery_emailCode_attemptsLeftMessage": "{current,plural, =1{Осталась 1 попытка} few{Осталось {current}/{max} попытки} many{Осталось {current}/{max} попыток} other{Осталось {current}/{max} попытки}}",
-  "passwordRecovery_emailCode_invalidCodeMessage": "Неверный код",
-  "passwordRecovery_emailCode_noCodeMessage": "Попытки закончились, запросите новый код",
-  "passwordRecovery_emailCode_goToEmailButtonText": "Перейти в почту",
-  "passwordRecovery_emailCode_pasteCodeDialogTitle": "Вставить код",
-  "passwordRecovery_emailCode_pasteCodeDialogContent": "Вставить код",
-  "passwordRecovery_emailCode_pasteCodeDialogAffirmativeActionText": "Да",
-  "passwordRecovery_emailCode_pasteCodeDialogNegativeActionText": "Нет",
-  "passwordRecovery_emailCode_chooseEmailAppToGoDialogTitle": "Выберите приложение",
-  "passwordRecovery_emailCode_resendCodeButtonText": "Отправить повторно",
-  "passwordRecovery_emailCode_failedToResendCodeMessage": "Не удалось отправить код",
-  "passwordRecovery_emailCode_successfullyResentCodeMessage": "Код успешно отправлен",
-  "passwordRecovery_emailCode_connectionErrorMessage": "Ошибка подключения",
-  "passwordRecovery_emailCode_undefinedErrorMessage": "Что-то пошло не так",
-
-  "root_bottomNavigationBar_feedLabel": "Подписки",
   "root_bottomNavigationBar_searchLabel": "Поиск",
-  "root_bottomNavigationBar_homeLabel": "Главная",
-  "root_bottomNavigationBar_catalogLabel": "Каталог",
+  "root_bottomNavigationBar_myProjectsLabel": "Мои проекты",
+  "root_bottomNavigationBar_applicationsLabel": "Заявки",
   "root_bottomNavigationBar_userLabel": "Профиль",
 
-  "root_home_curtainHeaderTemperatureCelsiusText": "{temperature} °C",
-  "root_home_curtainHeaderTemperatureFahrenheitText": "{temperature} °F",
-  "root_home_curtainHeaderDateJanuary": "{day} января",
-  "root_home_curtainHeaderDateFebruary": "{day} февраля",
-  "root_home_curtainHeaderDateMarch": "{day} марта",
-  "root_home_curtainHeaderDateApril": "{day} апреля",
-  "root_home_curtainHeaderDateMay": "{day} мая",
-  "root_home_curtainHeaderDateJune": "{day} июня",
-  "root_home_curtainHeaderDateJuly": "{day} июля",
-  "root_home_curtainHeaderDateAugust": "{day} августа",
-  "root_home_curtainHeaderDateSeptember": "{day} сентября",
-  "root_home_curtainHeaderDateOctober": "{day} октября",
-  "root_home_curtainHeaderDateNovember": "{day} ноября",
-  "root_home_curtainHeaderDateDecember": "{day} декабря",
-  "root_home_curtainContentTitle": "Сегодня",
-  "root_home_curtainContentTemperatureCelsiusText": "{temperature}°C",
-  "root_home_curtainContentTemperatureFahrenheitText": "{temperature}°F",
-  "root_home_curtainContentFeelsLikeTemperatureCelsiusText": "Ощущается как {temperature}°C",
-  "root_home_curtainContentFeelsLikeTemperatureFahrenheitText": "Ощущается как {temperature}°F",
-  "root_home_curtainContentPrecipitationsTitle": "Осадки",
-  "root_home_curtainContentPrecipitationsValueMetricText": "{precipitations} мм",
-  "root_home_curtainContentPrecipitationsValueImperialText": "{precipitations} инч",
-  "root_home_curtainContentHumidityTitle": "Влажность",
-  "root_home_curtainContentHumidityValueText": "{humidity}%",
-  "root_home_curtainContentWindSpeedTitle": "Ветер",
-  "root_home_curtainContentWindSpeedValueMetricText": "{windSpeed} м/с",
-  "root_home_curtainContentWindSpeedValueImperialText": "{windSpeed} м/ч",
-  "root_home_curtainContentPressureTitle": "Давление",
-  "root_home_curtainContentPressureValueMetricText": "{pressure} мм рт ст",
-  "root_home_curtainContentPressureValueImperialText": "{pressure} инч рт ст",
-  "root_home_curtainContentWeatherForecastTitle": "{days,plural, =1{Погода на 1 день} few{Погода на {days} дня} many{Погода на {days} дней} other{Погода на {days} дня}}",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsMonday": "Пн",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsTuesday": "Вт",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsWednesday": "Ср",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsThursday": "Чт",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsFriday": "Пт",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsSaturday": "Сб",
-  "root_home_curtainContentWeatherForecastItemDaysOfWeekAbbreviationsSunday": "Вс",
-  "root_home_curtainContentWeatherForecastItemTemperatureCelsiusText": "{temperature}°C",
-  "root_home_curtainContentWeatherForecastItemTemperatureFahrenheitText": "{temperature}°F",
-  "root_home_curtainContentWeatherForecastItemFeelsLikeTemperatureCelsiusText": "{temperature}°C",
-  "root_home_curtainContentWeatherForecastItemFeelsLikeTemperatureFahrenheitText": "{temperature}°F",
-  "root_home_weatherLoadingConnectionErrorMessage": "Отсутствует подключение к интернету",
-  "root_home_weatherLoadingUndefinedErrorMessageTitle": "Что-то пошло не так",
-  "root_home_weatherLoadingUndefinedErrorMessageSubtitle": "Техническая ошибка, мы решаем вопрос",
-  "root_home_weatherLoadingTryAgainButtonText": "Повторить попытку",
-  "root_home_choicesLoadingConnectionErrorMessage": "Отсутствует подключение к интернету",
-  "root_home_choicesLoadingUndefinedErrorMessageTitle": "Что-то пошло не так",
-  "root_home_choicesLoadingUndefinedErrorMessageSubtitle": "Техническая ошибка, мы решаем вопрос",
-  "root_home_choicesLoadingTryAgainButtonText": "Повторить попытку",
+  "root_projects_search_input_hint": "Поиск",
+  "root_projects_projectCard_contactsTitle": "Контакты:",
+  "root_projects_projectCard_nameTitle": "Название:",
+  "root_projects_projectCard_descriptionTitle": "Описание:",
+  "root_projects_projectCard_applyButtonText": "Записаться",
 
-  "root_user_looksCountText": "{count, plural, =0{Луков} =1{Лук} few{Лука} other{Луков}}",
-  "root_user_followersCountText": "{count, plural, =1{Подписчик} few{Подписчика} other{Подписчиков}}",
-  "root_user_followsCountText": "{count, plural, =1{Подписка} few{Подписки} other{Подписок}}",
+  "root_applications_sentApplicationsTabTitle": "Исходящие",
+  "root_applications_incomingApplicationsTabTitle": "Входящие",
 
-  "root_followers_search_input_hint": "Поиск",
-  "root_follows_search_input_hint": "Поиск",
+  "root_applications_applicationCard_messageTitle": "Сопроводительное сообщение:",
+  "root_applications_applicationCard_statusTitle": "Статус:",
+  "root_applications_applicationCard_statusAppliedText": "ожидает рассмотрения",
+  "root_applications_applicationCard_statusRejectedText": "отклонено",
+  "root_applications_applicationCard_statusAcceptedText": "принято",
 
+  "root_apply_messageInputHint": "Сообщение...",
+  "root_apply_applyButtonText": "Записаться",
+  "root_apply_alreadyAppliedErrorMessage": "Вы уже записаны",
+  "root_apply_connectionErrorMessage": "Отсутствует подключение к интернету",
+  "root_apply_undefinedErrorMessage": "Что-то пошло не так",
+
+  "common_lists_no_items_title": "Ничего не найдено",
   "common_lists_loadingConnectionErrorMessage": "Отсутствует подключение к интернету",
   "common_lists_loadingUndefinedErrorMessageTitle": "Что-то пошло не так",
   "common_lists_loadingUndefinedErrorMessageSubtitle": "Техническая ошибка, мы решаем вопрос",
