--- a/edu_localizations/lib/src/app_en.arb
+++ b/edu_localizations/lib/src/app_en.arb
@@ -59,12 +59,23 @@
   "root_applications_applicationCard_statusAppliedText": "awaiting review",
   "root_applications_applicationCard_statusRejectedText": "rejected",
   "root_applications_applicationCard_statusAcceptedText": "accepted",
+  "root_applications_applicationCard_processApplicationRejectText": "Reject",
+  "root_applications_applicationCard_processApplicationAcceptText": "Accept",
 
-  "root_apply_messageInputHint": "Message...",
-  "root_apply_applyButtonText": "Apply",
-  "root_apply_alreadyAppliedErrorMessage": "You have already applied",
-  "root_apply_connectionErrorMessage": "No internet connection",
-  "root_apply_undefinedErrorMessage": "Something went wrong",
+  "root_applyProject_messageInputHint": "Message...",
+  "root_applyProject_applyButtonText": "Apply",
+  "root_applyProject_alreadyAppliedErrorMessage": "You have already applied",
+  "root_applyProject_connectionErrorMessage": "No internet connection",
+  "root_applyProject_undefinedErrorMessage": "Something went wrong",
+
+  "root_createProject_createButtonText": "Create",
+  "root_createProject_nameInputHint": "Name",
+  "root_createProject_descriptionInputHint": "Description",
+  "root_createProject_contactsInputHint": "Contacts",
+  "root_createProject_categoriesText": "Categories",
+  "root_createProject_categoriesInputHint": "Start typing...",
+  "root_createProject_connectionErrorMessage": "No internet connection",
+  "root_createProject_undefinedErrorMessage": "Something went wrong",
 
   "common_lists_no_items_title": "Nothing found",
   "common_lists_loadingConnectionErrorMessage": "No internet connection",
