--- a/edu_localizations/lib/src/app_ru.arb
+++ b/edu_localizations/lib/src/app_ru.arb
@@ -49,12 +49,23 @@
   "root_applications_applicationCard_statusAppliedText": "ожидает рассмотрения",
   "root_applications_applicationCard_statusRejectedText": "отклонено",
   "root_applications_applicationCard_statusAcceptedText": "принято",
+  "root_applications_applicationCard_processApplicationRejectText": "Отклонить",
+  "root_applications_applicationCard_processApplicationAcceptText": "Принять",
 
-  "root_apply_messageInputHint": "Сообщение...",
-  "root_apply_applyButtonText": "Записаться",
-  "root_apply_alreadyAppliedErrorMessage": "Вы уже записаны",
-  "root_apply_connectionErrorMessage": "Отсутствует подключение к интернету",
-  "root_apply_undefinedErrorMessage": "Что-то пошло не так",
+  "root_applyProject_messageInputHint": "Сообщение...",
+  "root_applyProject_applyButtonText": "Записаться",
+  "root_applyProject_alreadyAppliedErrorMessage": "Вы уже записаны",
+  "root_applyProject_connectionErrorMessage": "Отсутствует подключение к интернету",
+  "root_applyProject_undefinedErrorMessage": "Что-то пошло не так",
+
+  "root_createProject_createButtonText": "Создать",
+  "root_createProject_nameInputHint": "Название",
+  "root_createProject_descriptionInputHint": "Описание",
+  "root_createProject_contactsInputHint": "Контакты",
+  "root_createProject_categoriesText": "Категории",
+  "root_createProject_categoriesInputHint": "Начните вводить...",
+  "root_createProject_connectionErrorMessage": "Отсутствует подключение к интернету",
+  "root_createProject_undefinedErrorMessage": "Что-то пошло не так",
 
   "common_lists_no_items_title": "Ничего не найдено",
   "common_lists_loadingConnectionErrorMessage": "Отсутствует подключение к интернету",
