--- a/edu_localizations/lib/src/app_en.arb
+++ b/edu_localizations/lib/src/app_en.arb
@@ -52,6 +52,27 @@
   "root_projects_projectCard_descriptionTitle": "Description:",
   "root_projects_projectCard_applyButtonText": "Apply",
   "root_projects_projectCard_recommendationsText": "Recommendations",
+  "root_projects_projectCard_datesText": "Project dates:",
+  "root_projects_projectCard_applicationDeadlineText": "Application deadline:",
+  "root_projects_projectCard_employmentTypeText": "Employment type:",
+  "root_projects_projectCard_territoryText": "Territory:",
+  "root_projects_projectCard_skillsText": "Required skills:",
+  "root_projects_projectCard_creditNumberText": "Credits number:",
+  "root_projects_projectCard_campusText": "Campus:",
+  "root_projects_projectCard_projectTypeText": "Project type:",
+  "root_projects_projectCard_participantsNumberTooltipText": "Participants number",
+  "root_projects_projectCard_weeklyHoursTooltipText": "Hours per week",
+  "root_projects_projectCard_employmentTypeRemote": "Remote",
+  "root_projects_projectCard_employmentTypeOnSiteWork": "On site",
+  "root_projects_projectCard_employmentTypeExpeditions": "Expedition",
+  "root_projects_projectCard_employmentTypeInternships": "Internship",
+  "root_projects_projectCard_campusTypeMoscow": "Moscow",
+  "root_projects_projectCard_campusTypeNizhniyNovgorod": "Nizhniy Novgorod",
+  "root_projects_projectCard_campusTypePerm": "Perm",
+  "root_projects_projectCard_campusTypeSaintPetersburg": "Saint Petersburg",
+  "root_projects_projectCard_projectTypeResearch": "Research",
+  "root_projects_projectCard_projectTypeApplication": "Application",
+  "root_projects_projectCard_projectTypeService": "Service",
 
   "root_applications_sentApplicationsTabTitle": "Outgoing",
   "root_applications_incomingApplicationsTabTitle": "Incoming",
@@ -72,10 +93,45 @@
 
   "root_createProject_createButtonText": "Create",
   "root_createProject_nameInputHint": "Name",
+  "root_createProject_nameTitle": "Name",
   "root_createProject_descriptionInputHint": "Description",
+  "root_createProject_descriptionTitle": "Description",
   "root_createProject_contactsInputHint": "Contacts",
-  "root_createProject_categoriesText": "Categories",
-  "root_createProject_categoriesInputHint": "Start typing...",
+  "root_createProject_contactsTitle": "Contacts",
+  "root_createProject_startDateInputHint": "Not specified",
+  "root_createProject_startDateTitle": "Start date",
+  "root_createProject_endDateInputHint": "Not specified",
+  "root_createProject_endDateTitle": "End date",
+  "root_createProject_applicationDeadlineInputHint": "Not specified",
+  "root_createProject_applicationDeadlineTitle": "Application deadline",
+  "root_createProject_employmentTypeInputHint": "Not specified",
+  "root_createProject_employmentTypeTitle": "Employment type",
+  "root_createProject_territoryInputHint": "Not specified",
+  "root_createProject_territoryTitle": "Territory",
+  "root_createProject_skillsInputHint": "Not specified",
+  "root_createProject_skillsTitle": "Required skills",
+  "root_createProject_creditNumberInputHint": "Not specified",
+  "root_createProject_creditNumberTitle": "Credits number",
+  "root_createProject_campusInputHint": "Not specified",
+  "root_createProject_campusTitle": "Campus",
+  "root_createProject_participantsNumberInputHint": "Not specified",
+  "root_createProject_participantsNumberTitle": "Participants number",
+  "root_createProject_projectTypeInputHint": "Not specified",
+  "root_createProject_projectTypeTitle": "Project type",
+  "root_createProject_weeklyHoursInputHint": "Not specified",
+  "root_createProject_weeklyHoursNumberTitle": "Hours per week",
+  "root_createProject_categoriesTitle": "Categories",
+  "root_createProject_employmentTypeRemote": "Remote",
+  "root_createProject_employmentTypeOnSiteWork": "On site",
+  "root_createProject_employmentTypeExpeditions": "Expedition",
+  "root_createProject_employmentTypeInternships": "Internship",
+  "root_createProject_campusTypeMoscow": "Moscow",
+  "root_createProject_campusTypeNizhniyNovgorod": "Nizhniy Novgorod",
+  "root_createProject_campusTypePerm": "Perm",
+  "root_createProject_campusTypeSaintPetersburg": "Saint Petersburg",
+  "root_createProject_projectTypeResearch": "Research",
+  "root_createProject_projectTypeApplication": "Application",
+  "root_createProject_projectTypeService": "Service",
   "root_createProject_connectionErrorMessage": "No internet connection",
   "root_createProject_undefinedErrorMessage": "Something went wrong",
 
@@ -93,21 +149,22 @@
   "root_profile_categoriesNotSetText": "Not specified",
   "root_profile_logoutButtonText": "Logout",
 
-  "root_profileEditing_connectionErrorMessage": "No internet connection",
-  "root_profileEditing_undefinedErrorMessageTitle": "Something went wrong",
-  "root_profileEditing_undefinedErrorMessageSubtitle": "Technical error, we are solving the issue",
-  "root_profileEditing_tryAgainButtonText": "Try again",
-  "root_profileEditing_emailTitle": "E-mail",
-  "root_profileEditing_emailInputHint": "E-mail",
-  "root_profileEditing_fullNameTitle": "Full name",
-  "root_profileEditing_fullNameInputHint": "Full name",
-  "root_profileEditing_facultyTitle": "Faculty",
-  "root_profileEditing_facultyNotSetText": "Not specified",
-  "root_profileEditing_bioTitle": "About me",
-  "root_profileEditing_bioNotSetText": "Not specified",
-  "root_profileEditing_categoriesTitle": "Skills",
-  "root_profileEditing_categoriesInputHint": "Start typing...",
-  "root_profileEditing_submitButtonText": "Save",
+  "profileEditing_profileEditing_connectionErrorMessage": "No internet connection",
+  "profileEditing_profileEditing_undefinedErrorMessageTitle": "Something went wrong",
+  "profileEditing_profileEditing_undefinedErrorMessageSubtitle": "Technical error, we are solving the issue",
+  "profileEditing_profileEditing_tryAgainButtonText": "Try again",
+  "profileEditing_profileEditing_emailTitle": "E-mail",
+  "profileEditing_profileEditing_emailInputHint": "E-mail",
+  "profileEditing_profileEditing_fullNameTitle": "Full name",
+  "profileEditing_profileEditing_fullNameInputHint": "Full name",
+  "profileEditing_profileEditing_facultyTitle": "Faculty",
+  "profileEditing_profileEditing_facultyNotSetText": "Not specified",
+  "profileEditing_profileEditing_bioTitle": "About me",
+  "profileEditing_profileEditing_bioNotSetText": "Not specified",
+  "profileEditing_profileEditing_categoriesTitle": "Skills",
+  "profileEditing_profileEditing_submitButtonText": "Save",
+
+  "categories_categories_categoriesInputHint": "Start typing...",
 
   "common_lists_loading_noItemsMessage": "Nothing found",
   "common_lists_loading_connectionErrorMessage": "No internet connection",
