--- a/edu_localizations/lib/src/app_ru.arb
+++ b/edu_localizations/lib/src/app_ru.arb
@@ -42,6 +42,27 @@
   "root_projects_projectCard_descriptionTitle": "Описание:",
   "root_projects_projectCard_applyButtonText": "Записаться",
   "root_projects_projectCard_recommendationsText": "Рекоммендации",
+  "root_projects_projectCard_datesText": "Даты проекта:",
+  "root_projects_projectCard_applicationDeadlineText": "Дедлайн подачи завявки:",
+  "root_projects_projectCard_employmentTypeText": "Тип занятости:",
+  "root_projects_projectCard_territoryText": "Территория:",
+  "root_projects_projectCard_skillsText": "Требуемые навыки:",
+  "root_projects_projectCard_creditNumberText": "Количество кредитов:",
+  "root_projects_projectCard_campusText": "Кампус:",
+  "root_projects_projectCard_projectTypeText": "Тип проекта:",
+  "root_projects_projectCard_participantsNumberTooltipText": "Количество участников",
+  "root_projects_projectCard_weeklyHoursTooltipText": "Часов в неделю",
+  "root_projects_projectCard_employmentTypeRemote": "Удаленный",
+  "root_projects_projectCard_employmentTypeOnSiteWork": "Очный",
+  "root_projects_projectCard_employmentTypeExpeditions": "Экспедиция",
+  "root_projects_projectCard_employmentTypeInternships": "Стажировка",
+  "root_projects_projectCard_campusTypeMoscow": "Москва",
+  "root_projects_projectCard_campusTypeNizhniyNovgorod": "Нижний Новгород",
+  "root_projects_projectCard_campusTypePerm": "Пермь",
+  "root_projects_projectCard_campusTypeSaintPetersburg": "Санкт-Петербург",
+  "root_projects_projectCard_projectTypeResearch": "Исследование",
+  "root_projects_projectCard_projectTypeApplication": "Приложение",
+  "root_projects_projectCard_projectTypeService": "Сервис",
 
   "root_applications_sentApplicationsTabTitle": "Исходящие",
   "root_applications_incomingApplicationsTabTitle": "Входящие",
@@ -62,10 +83,45 @@
 
   "root_createProject_createButtonText": "Создать",
   "root_createProject_nameInputHint": "Название",
+  "root_createProject_nameTitle": "Название",
   "root_createProject_descriptionInputHint": "Описание",
+  "root_createProject_descriptionTitle": "Описание",
   "root_createProject_contactsInputHint": "Контакты",
-  "root_createProject_categoriesText": "Категории",
-  "root_createProject_categoriesInputHint": "Начните вводить...",
+  "root_createProject_contactsTitle": "Контакты",
+  "root_createProject_startDateInputHint": "Не указана",
+  "root_createProject_startDateTitle": "Дата начала",
+  "root_createProject_endDateInputHint": "Не указана",
+  "root_createProject_endDateTitle": "Дата конца",
+  "root_createProject_applicationDeadlineInputHint": "Не указан",
+  "root_createProject_applicationDeadlineTitle": "Дедлайн подачи заявки",
+  "root_createProject_employmentTypeInputHint": "Не указан",
+  "root_createProject_employmentTypeTitle": "Тип занятости",
+  "root_createProject_territoryInputHint": "Не указана",
+  "root_createProject_territoryTitle": "Территория",
+  "root_createProject_skillsInputHint": "Не указаны",
+  "root_createProject_skillsTitle": "Требуемые навки",
+  "root_createProject_creditNumberInputHint": "Не указано",
+  "root_createProject_creditNumberTitle": "Количество кредитов",
+  "root_createProject_campusInputHint": "Не указан",
+  "root_createProject_campusTitle": "Кампус",
+  "root_createProject_participantsNumberInputHint": "Не указано",
+  "root_createProject_participantsNumberTitle": "Количество участников",
+  "root_createProject_projectTypeInputHint": "Не указан",
+  "root_createProject_projectTypeTitle": "Тип проекта",
+  "root_createProject_weeklyHoursInputHint": "Не указано",
+  "root_createProject_weeklyHoursNumberTitle": "Часов в неделю",
+  "root_createProject_categoriesTitle": "Категории",
+  "root_createProject_employmentTypeRemote": "Удаленный",
+  "root_createProject_employmentTypeOnSiteWork": "Очный",
+  "root_createProject_employmentTypeExpeditions": "Экспедиция",
+  "root_createProject_employmentTypeInternships": "Стажировка",
+  "root_createProject_campusTypeMoscow": "Москва",
+  "root_createProject_campusTypeNizhniyNovgorod": "Нижний Новгород",
+  "root_createProject_campusTypePerm": "Пермь",
+  "root_createProject_campusTypeSaintPetersburg": "Санкт-Петербург",
+  "root_createProject_projectTypeResearch": "Исследование",
+  "root_createProject_projectTypeApplication": "Приложение",
+  "root_createProject_projectTypeService": "Сервис",
   "root_createProject_connectionErrorMessage": "Отсутствует подключение к интернету",
   "root_createProject_undefinedErrorMessage": "Что-то пошло не так",
 
@@ -83,21 +139,22 @@
   "root_profile_categoriesNotSetText": "Не указаны",
   "root_profile_logoutButtonText": "Выйти",
 
-  "root_profileEditing_connectionErrorMessage": "Отсутствует подключение к интернету",
-  "root_profileEditing_undefinedErrorMessageTitle": "Что-то пошло не так",
-  "root_profileEditing_undefinedErrorMessageSubtitle": "Техническая ошибка, мы решаем вопрос",
-  "root_profileEditing_tryAgainButtonText": "Повторить попытку",
-  "root_profileEditing_emailTitle": "E-mail",
-  "root_profileEditing_emailInputHint": "E-mail",
-  "root_profileEditing_fullNameTitle": "Полное имя",
-  "root_profileEditing_fullNameInputHint": "Полное имя",
-  "root_profileEditing_facultyTitle": "Факультет",
-  "root_profileEditing_facultyNotSetText": "Не указан",
-  "root_profileEditing_bioTitle": "О себе",
-  "root_profileEditing_bioNotSetText": "Не указано",
-  "root_profileEditing_categoriesTitle": "Навыки",
-  "root_profileEditing_categoriesInputHint": "Начните вводить...",
-  "root_profileEditing_submitButtonText": "Сохранить",
+  "profileEditing_profileEditing_connectionErrorMessage": "Отсутствует подключение к интернету",
+  "profileEditing_profileEditing_undefinedErrorMessageTitle": "Что-то пошло не так",
+  "profileEditing_profileEditing_undefinedErrorMessageSubtitle": "Техническая ошибка, мы решаем вопрос",
+  "profileEditing_profileEditing_tryAgainButtonText": "Повторить попытку",
+  "profileEditing_profileEditing_emailTitle": "E-mail",
+  "profileEditing_profileEditing_emailInputHint": "E-mail",
+  "profileEditing_profileEditing_fullNameTitle": "Полное имя",
+  "profileEditing_profileEditing_fullNameInputHint": "Полное имя",
+  "profileEditing_profileEditing_facultyTitle": "Факультет",
+  "profileEditing_profileEditing_facultyNotSetText": "Не указан",
+  "profileEditing_profileEditing_bioTitle": "О себе",
+  "profileEditing_profileEditing_bioNotSetText": "Не указано",
+  "profileEditing_profileEditing_categoriesTitle": "Навыки",
+  "profileEditing_profileEditing_submitButtonText": "Сохранить",
+
+  "categories_categories_categoriesInputHint": "Начните вводить...",
 
   "common_lists_loading_noItemsMessage": "Ничего не найдено",
   "common_lists_loading_connectionErrorMessage": "Отсутствует подключение к интернету",
